Adding More Styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>MAGASIN</title>
 </head>
 <body>
+    <header>
+        <h1>Store Manager</h1>
+    </header>
     <main>
         <section class="container">
             <div class="row">
