Updating script file

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <section class="container table">
             <div class="tableBox">
-                <table style="width:100%" id="table">
+                <table style="width:100%">
                     <tr>
                       <th>Nom du produit</th>
                       <th>La marque du produit</th>
