--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
         <section class="container table">
             <div class="tableBox">
                 <table style="width:100%">
-                    <tr>
+                    <tr id="TableLength">
                       <th>Nom du produit</th>
                       <th>La marque du produit</th>
                       <th>Prix</th>
-                      <th>Type du produit</th>
+                      <th id="th">Type du produit</th>
                       <th>Date de production</th>
                       <th>Produit en promotion ?</th>
                       <th>Action</th>
