--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                       <td>Oui</td>
                       <td>
                         <div>
-                            <button id="modifier">Modifier</button>
-                            <button id="supprimer">Supprimer</button>
+                            <button class="modifier">Modifier</button>
+                            <button class="supprimer">Supprimer</button>
                         </div>
                       </td>
                     </tr>
