--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
                         <div class="cell">
                             <button id="ajouter" onclick="checkInputs()">Ajouter</button>
+                            <button id="modifier" onclick="modification()">Ajouter</button>
                         </div>
                     </form>
                 </div>
