updating script file

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                         <div class="cell">
                             <button id="ajouter" onclick="checkInputs()">Ajouter</button>
-                            <button id="modifier" onclick="modification()">Ajouter</button>
+                            <button id="modifier">Mise à jour</button>
                         </div>
                     </form>
                 </div>
@@ -75,7 +75,7 @@
         <section class="container table">
             <div class="tableBox">
                 <table id="myTable" style="width:100%">
-                    <tr id="TableLength">
+                    <tr>
                       <th>Nom du produit</th>
                       <th>La marque du produit</th>
                       <th>Prix</th>
