--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
     <title>MAGASIN</title>
 </head>
 <body>
+    <div id="confiMsg">
+        <div class="msgBox">
+        <h2 id="deleMsg"></h2>
+            <div>
+                <button id="cancel">Annuler</button>
+                <button id="delete">Confirmer</button>
+            </div>
+        </div>
+    </div>
     <header>
         <h1>Store Manager</h1>
     </header>
     <main>
+        
         <section class="container">
             <div class="row">
                 <div class="imgBox">
