--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="confiMsg">
-        <div class="msgBox">
+        <div class="msgBox scale-up-center">
         <h2 id="deleMsg"></h2>
             <div>
                 <button id="cancel">Annuler</button>
